# skills

./: .gitignore  README.md
.claude-plugin/: plugin.json
skills/ai-ml/evolver/: SKILL.md
skills/automation/agent-browser/: SKILL.md
skills/automation/install-github-skills/: SKILL.md
skills/automation/system-review/: SKILL.md
skills/career/internship-hunter/: SKILL.md
skills/misc/paper2beamer/: SKILL.md  pyproject.toml
skills/misc/paper2beamer/isa/: Berkeley.yaml  Berlin.yaml  Boadilla.yaml  Madrid.yaml  Simple.md  Simple.yaml  _base_latex.yaml  isa.schema.json
skills/misc/paper2beamer/isa/extensions/: Base.yaml  Columns.yaml  Density.yaml  OverflowGuard.yaml  SpecialFrames.yaml  Theorems.yaml  Zsem.yaml
skills/misc/paper2beamer/references/: compile-verify.md  domain-setup.md  emission.md  ingest.md  intent.md  ir-format.md  isa-setup.md  narrative-ir.md  pipeline-overview.md  repair.md  review-gate.md  slide-ir.md
skills/misc/paper2beamer/scripts/: build.sh  capacity_probe.py  conformance.py  degrade.py  emit_beamer.py  frontend_docling.py  isa_resolve.py  latex_log.py  repair_router.py  sweep_themes.py  theme_swap.py
skills/misc/paper2beamer/tests/: test_capacity_probe.py  test_conformance.py  test_degrade.py  test_emit_beamer.py  test_frontend_docling.py  test_isa_resolve.py  test_latex_log.py  test_madrid_theme.py  test_repair_router.py  test_sweep_themes.py  test_theme_swap.py
skills/misc/paper2beamer/tests/fixtures/golden-deck/: order.txt  preamble.tex
skills/misc/paper2beamer/tests/fixtures/golden-deck/frames/: S01.tex  S02.tex
(+63 files in other folders)
