[project]
name = "paper2beamer"
version = "0.1.0"
description = "Deterministic tooling for the paper2beamer skill (ingest, log parsing, deck assembly, repair routing)."
requires-python = ">=3.11"
# Contract-core deps: read/validate the structured ISA and parse emitted LaTeX.
# All pure-Python, no model downloads (unlike the optional 'ingest' group).
dependencies = [
    "pyyaml>=6",
    "jsonschema>=4",
    "pylatexenc>=2.10,<3",
]

[dependency-groups]
dev = [
    "pytest>=8",
]
# Deterministic PDF ingest engine. Install on demand:  uv sync --group ingest
# Pinned to a major line so extraction behaviour does not shift under us.
ingest = [
    "docling>=2,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Let `from scripts.x import ...` resolve when running pytest from this dir.
pythonpath = ["."]
# Heavy, model-downloading tests are marked 'heavy' and skipped in CI.
markers = ["heavy: tests that run the full Docling model pipeline"]
addopts = "-m 'not heavy'"
